--- a/.gitattributes
+++ b/.gitattributes
@@ -1029,6 +1029,7 @@ compiler/xtensa/hlcgcpu.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=na
 compiler/xtensa/itcpugas.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/ncpuadd.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/ncpucnv.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/ncpuinl.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/ncpumat.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/ncpuutil.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/racpugas.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
