+ initial FreeRTOS RTL support, largely based on the Embedded target, limited to Xtensa so far
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@44400 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -834,6 +834,7 @@ compiler/systems/i_beos.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nat
 compiler/systems/i_bsd.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/systems/i_embed.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/systems/i_emx.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/systems/i_freertos.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/systems/i_gba.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/systems/i_go32v2.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/systems/i_haiku.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -865,6 +866,7 @@ compiler/systems/t_beos.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nat
 compiler/systems/t_bsd.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/systems/t_embed.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/systems/t_emx.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/systems/t_freertos.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/systems/t_gba.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/systems/t_go32v2.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/systems/t_haiku.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -10904,6 +10906,25 @@ rtl/freebsd/x86_64/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 rtl/freebsd/x86_64/reloc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/x86_64/si_c.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/x86_64/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/check.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/classes.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+rtl/freertos/consoleio.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+rtl/freertos/dos.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+rtl/freertos/heapmgr.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+rtl/freertos/rtldefs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/sysdir.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/sysfile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/sysheap.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/sysos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/sysosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/system.cfg svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/system.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+rtl/freertos/systhrd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/sysutils.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+rtl/freertos/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/freertos/xtensa/esp32.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/gba/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/gba/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/gba/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
