--- a/.gitattributes
+++ b/.gitattributes
@@ -10283,6 +10283,9 @@ rtl/amiga/m68k svn_eol_002dtype=nativ
 rtl/amiga/m68k/doslibf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/execd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/execf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dtype=nativ svn_eol_002dstyle=native
+rtl/amiga/m68k/legacydos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/amiga/m68k/legacyexec.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/amiga/m68k/legacyutil.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/m68kamiga.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/si_prc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
