--- a/.gitattributes
+++ b/.gitattributes
@@ -10285,8 +10285,11 @@ rtl/amiga/m68k/doslibf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 rtl/amiga/m68k/execd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/execf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dtype=nativ svn_eol_002dstyle=native
 rtl/amiga/m68k/legacydos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/amiga/m68k/legacydosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/legacyexec.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/amiga/m68k/legacyexech.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/legacyutil.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/amiga/m68k/legacyutilh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/m68kamiga.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/m68k/si_prc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
