m68k: add the converted includes, based on m68kins.dat
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@45311 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -390,7 +390,11 @@ compiler/m68k/cputarg.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 compiler/m68k/hlcgcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/itcpugas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/m68kins.dat svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/m68k/m68knop.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/m68k/m68kop.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/m68kreg.dat svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native svn_eol_002dmime=text%2Fplain
+compiler/m68k/m68kstd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/m68k/m68ktab.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/n68kadd.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/n68kcal.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/n68kcnv.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
